# x86_energy

./: .gitmodules  .travis.yml  AUTHORS  CMakeLists.txt  LICENSE  README.md  amd_fam15h_power.c  example.c  merge_static_libs.sh  msr.c  msr.h  rapl.c  x86_energy.c  x86_energy.h  x86_energyConfig.cmake
.github/workflows/: cmake.yml
cmake/: FindLikwid.cmake  FindX86Adapt.cmake
examples/: example.cpp
include/: msr.h  x86_energy.h  x86_energy.hpp  x86_energy_arch.h  x86_energy_source.h
src/: example.c  msr.c
src/access/: likwid.c  msr.c  msr_fam15.c  msr_fam23.c  perf.c  procfs.c  sysfs.c  sysfs_fam15.c  x86_adapt.c  x86_adapt_fam23.c
src/architecture/: architecture.c  overflow_thread.c  parse_architecture.c
src/error/: error.c
src/include/: access.h  architecture.h  cpuid.h  error.h  overflow_thread.h  possible_counters.h
test/: CMakeLists.txt  compile.sh  run.sh  test.c  test.cpp
